service.yml
kind: Service
apiVersion: v1
metadata:
  name: petclinic-service
  namespace: petclinic
spec:
  selector:
    app: petclinic-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
